--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,21 @@
+* {
+    /* display: block; */
+    z-index: 1;
+    color: white;
+    text-align: center;
+}
+
+/* .Typewriter__wrapper {
+    font-size: 2.2em !important;
+    color: #be6adf !important;
+    font-weight: 600 !important;
+} */
+
+/* .Typewriter__cursor {
+    font-size: 2.4em !important;
+    color: #b562d6 !important;
+} */
+
 .wave {
     animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
     animation-duration: 2.1s; /* Change to speed up or slow down */
@@ -34,8 +52,8 @@
 	transition: all 0.3s ease-out 0s !important;
 	padding: 0.3rem 2rem !important;
 	font-size: 1.2rem !important;
-    background-color: #212038d8;
-    backdrop-filter: blur(15px) !important;
+    /* background-color: #181a27; */
+    /* backdrop-filter: blur(15px) !important; */
 }
 
 .navbar-nav .nav-link {
@@ -125,3 +143,103 @@
 	  padding: 0.7rem 1rem !important;
 	}
 }
+
+/* --------- */
+/* Projects */
+/* --------- */
+.project-section {
+    position: relative !important;
+    padding-top: 150px !important;
+    padding-bottom: 30px !important;
+    background-image: var(--section-background-color) !important;
+  }
+  
+  .project-card {
+    padding-top: 50px !important;
+    padding-bottom: 50px !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+    height: auto !important;
+  }
+  
+  .project-card-view {
+    box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
+    color: white !important;
+    background-color: transparent !important;
+    opacity: 0.9 !important;
+    transition: all 0.5s ease 0s !important;
+    height: 100% !important;
+  }
+  .project-card-view:hover {
+    transform: scale(1.02) !important;
+    overflow: hidden !important;
+    box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
+  }
+  
+  .blog-card {
+    padding-top: 50px !important;
+    padding-bottom: 50px !important;
+    padding-left: 25px !important;
+    padding-right: 25px !important;
+    height: auto !important;
+  }
+  
+  .blog-card-view {
+    background-color: transparent !important;
+    box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
+    color: white !important;
+    transition: all 0.5s ease 0s !important;
+    height: 100% !important;
+  }
+  
+  .blog-link {
+    color: white !important;
+    text-decoration: none !important;
+  }
+  
+  .blog-link:hover {
+    cursor: pointer !important;
+  }
+  
+  .blog-card-view:hover {
+    transform: scale(1.02) !important;
+    overflow: hidden !important;
+    box-shadow: 0 3px 3px 5px rgba(155, 88, 173, 0.65) !important;
+  }
+  
+  .card-img-top {
+    padding: 20px !important;
+    opacity: 0.8 !important;
+    border-radius: 10px !important;
+  }
+  
+  .blog-img {
+    padding: 0px !important;
+    opacity: 0.8 !important;
+    border-radius: 0px !important;
+  }
+  
+.btn-primary {
+    color: #fff !important;
+    background-color: #623686 !important;
+    border-color: #623686 !important;
+    align-self: end !important;
+    margin: 0px 0.5rem
+}
+  
+  .btn-primary:hover {
+    color: #fff !important;
+    background-color: #6d20c5d7 !important;
+    border-color: #6d20c5d7 !important;
+  }
+  .btn:focus {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  .project-heading {
+    color: white !important;
+    font-size: 2.3em !important;
+    font-weight: 500 !important;
+    padding-top: 10px !important;
+  }
+  
