--- a/style.css
+++ b/style.css
@@ -5,16 +5,16 @@
     text-align: center;
 }
 
-.Typewriter__wrapper {
-    /* font-size: 2.2em !important; */
-    /* color: #be6adf !important; */
-    /* font-weight: 600 !important; */
-}
+/* .Typewriter__wrapper {
+    font-size: 2.2em !important;
+    color: #be6adf !important;
+    font-weight: 600 !important;
+} */
 
-.Typewriter__cursor {
-    /* font-size: 2.4em !important; */
-    /* color: #b562d6 !important; */
-}
+/* .Typewriter__cursor {
+    font-size: 2.4em !important;
+    color: #b562d6 !important;
+} */
 
 .wave {
     animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
