--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,14 @@
     /* display: block; */
     z-index: 1;
     color: white;
-    text-align: center;
+}
+
+.purple {
+	color: #c770f0;
+}
+
+.ta-c {
+	text-align: center;
 }
 
 /* --------------------------------------------------------------------- */
@@ -10,14 +17,13 @@
 /* --------------------------------------------------------------------- */
 .navbar {
 	position: fixed !important;
-	transition: all 0.3s ease-out 0s !important;
 	padding: 0.3rem 2rem !important;
 	font-size: 1.2rem !important;
+	transition: all 0.3s ease-out 0s !important;
 }
 
 .navbarSticky {
 	background-color: #212038d8 !important;
-    transition: all 0.3s ease-out 0s !important;
 	backdrop-filter: blur(15px) !important;
 	box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
 }
@@ -114,13 +120,18 @@
 /* --------------------------------------------------------------------- */
 /* Home Page Section */
 /* --------------------------------------------------------------------- */
-.App-header {
-	min-height: 100vh;
+.homeHeader {
+	margin-top: calc(5rem + 10vmin);
 	display: flex;
-	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	font-size: calc(10px + 2vmin);
+	font-size: calc(20px + 2vmin);
+}
+
+.homeContent {
+	margin-top: 160px;
+	display: flex;
+	justify-content: center;
+	font-size: calc(20px + 2vmin);
 }
 
 /* .Typewriter__wrapper {
@@ -158,18 +169,17 @@
 /* --------------------------------------------------------------------- */
 /* Projects */
 /* --------------------------------------------------------------------- */
-.project-section {
-    position: relative !important;
-    padding-top: 150px !important;
-    padding-bottom: 30px !important;
+.projectPage {
+	position: relative !important;
+	padding-top: calc(5rem + 10vmin) !important;
+	padding-bottom: 2rem !important;
 }
   
-.project-card {
-    padding: 50px 25px !important;
-    height: auto !important;
+.projectCol {
+    padding: 3.5rem 2rem !important;
 }
-  
-.project-card-view {
+
+.projectCard {
     box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
     background-color: transparent !important;
     opacity: 0.9 !important;
@@ -177,38 +187,25 @@
     height: 100% !important;
 }
 
-.project-card-view:hover {
+.projectCard:hover {
     transform: scale(1.02) !important;
-    overflow: hidden !important;
     box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
 }
   
-.card-img-top {
+.projectCard img {
   	padding: 20px !important;
   	opacity: 0.8 !important;
   	border-radius: 10px !important;
 }
   
-.btn-primary {
+.projectCard a {
     background-color: #623686 !important;
     border-color: #623686 !important;
     align-self: end !important;
     margin: 0px 0.5rem
 }
   
-.btn-primary:hover {
+.projectCard a:hover {
     background-color: #6d20c5d7 !important;
     border-color: #6d20c5d7 !important;
 }
-
-.btn:focus {
-    outline: none !important;
-    box-shadow: none !important;
-}
-
-.project-heading {
-    font-size: 2.3em !important;
-    font-weight: 500 !important;
-    padding-top: 10px !important;
-}
-  
