--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,4 @@
 * {
-    /* display: block; */
     z-index: 1;
     color: white;
 }
@@ -144,6 +143,7 @@
 	display: flex;
 	justify-content: center;
 	font-size: calc(20px + 2vmin);
+	line-height: 1.5;
 }
 
 /* .Typewriter__wrapper {
@@ -220,4 +220,16 @@
 .projectCard a:hover {
     background-color: #6d20c5d7 !important;
     border-color: #6d20c5d7 !important;
+}
+
+.reveal{
+	position: relative;
+	transform: translateY(150px);
+	opacity: 0;
+	transition: 1.5s all ease;
+}
+  
+.reveal.active{
+	transform: translateY(0);
+	opacity: 1;
 }
