--- a/style.css
+++ b/style.css
@@ -1,8 +1,149 @@
 * {
-    /* display: block; */
     z-index: 1;
     color: white;
-    text-align: center;
+}
+
+.purple {
+	color: #c770f0;
+}
+
+.ta-c {
+	text-align: center;
+}
+
+/* --------------------------------------------------------------------- */
+/* Navbar Section */
+/* --------------------------------------------------------------------- */
+.navbar {
+	position: fixed !important;
+	padding: 0.3rem 2rem !important;
+	font-size: 1.2rem !important;
+	transition: all 0.3s ease-out 0s !important;
+}
+
+.navbarSticky {
+	background-color: #212038d8 !important;
+	backdrop-filter: blur(15px) !important;
+	box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
+}
+
+.navbar-brand {
+	text-align: left;
+    width: 3rem;
+}
+
+.navbar-nav {
+	margin-left: auto;
+}
+
+.navbar-nav svg {
+	margin-bottom: 2px;
+}
+
+.navbar-nav a {
+	color: white !important;
+	padding-right: 1rem !important;
+	padding-left: 1rem !important;
+}
+
+.navbar-nav a::after {
+	content: "";
+	display: block;
+	height: 5px;
+	width: 0;
+	border-radius: 16px;
+	background: #c95bf5;
+	transition: all 0.3s ease-out 0s;
+}
+
+.navbar-nav a:hover::after {
+	width: 100%;
+}
+
+.navbar-toggler {
+	padding: 0.25rem 1.5rem !important;
+    position: relative !important;
+    background-color: transparent !important;
+    border-color: transparent !important;
+}
+
+.navbar-toggler span {
+	display: block !important;
+    background-color: #be50f4 !important;
+    height: 4px !important;
+    width: 27px !important;
+    margin-top: 5px !important;
+    margin-bottom: 5px !important;
+    transform: rotate(0deg) !important;
+}
+
+.navbar-toggler span:nth-child(1),
+.navbar-toggler span:nth-child(3) {
+	transition: transform 0.35s ease-in-out !important;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(1) {
+	position: absolute !important;
+    left: 24px !important;
+    top: 8px !important;
+    transform: rotate(135deg) !important;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(2) {
+	height: 12px !important;
+    visibility: hidden !important;
+    background-color: transparent !important;
+}
+
+.navbar-toggler:not(.collapsed) span:nth-child(3) {
+	position: absolute !important;
+    left: 24px !important;
+    top: 8px !important;
+    transform: rotate(-135deg) !important;
+}
+
+@media (max-width: 767px) {
+	
+	.navbar {
+		padding: 1rem 2rem !important;
+		font-size: 1.4rem !important;
+		background-color: #181a27 !important;
+    }
+
+	.navbar-nav svg {
+		margin-right: 0.5rem;
+	}
+
+	.navbar-nav a {
+		display: flex;
+		align-items: center;
+	}
+	
+    .navbar-nav a::after {
+		display: none !important;
+    }
+	
+	.nav-link {
+		padding: 0.7rem 1rem !important;
+	}
+}
+
+/* --------------------------------------------------------------------- */
+/* Home Page Section */
+/* --------------------------------------------------------------------- */
+.homeHeader {
+	margin-top: calc(5rem + 10vmin);
+	display: flex;
+	justify-content: center;
+	font-size: calc(20px + 2vmin);
+}
+
+.homeContent {
+	margin-top: 160px;
+	display: flex;
+	justify-content: center;
+	font-size: calc(20px + 2vmin);
+	line-height: 1.5;
 }
 
 /* .Typewriter__wrapper {
@@ -17,229 +158,78 @@
 } */
 
 .wave {
-    animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
-    animation-duration: 2.1s; /* Change to speed up or slow down */
-    animation-iteration-count: infinite; /* Never stop waving :) */
-    transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
-    display: inline-block;
+	animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
+	animation-duration: 2.1s; /* Change to speed up or slow down */
+	animation-iteration-count: infinite; /* Never stop waving :) */
+	transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
+	display: inline-block;
 }
 
 @keyframes wave-animation {
-    0% { transform: rotate(0deg); }
-    10% { transform: rotate(14deg); } 
-    /* The following five values can be played with to make the waving more or less extreme */
-    20% { transform: rotate(-8deg); }
-    30% { transform: rotate(14deg); }
-    40% { transform: rotate(-4deg); }
-    50% { transform: rotate(10deg); }
-    60% { transform: rotate(0deg); } 
-    /* Reset for the last half to pause */
-    100% { transform: rotate(0deg); }
+	0% { transform: rotate(0deg); }
+	10% { transform: rotate(14deg); } 
+	/* The following five values can be played with to make the waving more or less extreme */
+	20% { transform: rotate(-8deg); }
+	30% { transform: rotate(14deg); }
+	40% { transform: rotate(-4deg); }
+	50% { transform: rotate(10deg); }
+	60% { transform: rotate(0deg); } 
+	/* Reset for the last half to pause */
+	100% { transform: rotate(0deg); }
 }
 
-/* --------- */
-/* Navbar Section */
-/* --------- */
-.sticky {
-	background-color: #212038d8 !important;
-    transition: all 0.3s ease-out 0s !important;
-	backdrop-filter: blur(15px) !important;
-	box-shadow: 0px 10px 10px 0px rgba(9, 5, 29, 0.171) !important;
-}
-
-.navbar {
-    position: fixed !important;
-	transition: all 0.3s ease-out 0s !important;
-	padding: 0.3rem 2rem !important;
-	font-size: 1.2rem !important;
-    /* background-color: #181a27; */
-    /* backdrop-filter: blur(15px) !important; */
-}
-
-.navbar-nav .nav-link {
-    color: white !important;
-    padding-right: 1rem !important;
-    padding-left: 1rem !important;
-}
-
-.navbar-brand {
-    text-align: left;
-    width: 3rem;
-}
-
-.navbar-nav {
-    margin-left: auto;
-}
-
-.navbar-toggler {
-    padding: 0.25rem 1.5rem !important;
-    position: relative !important;
-    background-color: transparent !important;
-    border-color: transparent !important;
-}
-  
-.navbar-toggler span {
-    display: block !important;
-    background-color: #be50f4 !important;
-    height: 4px !important;
-    width: 27px !important;
-    margin-top: 5px !important;
-    margin-bottom: 5px !important;
-    transform: rotate(0deg) !important;
-}
-
-.navbar-toggler span:nth-child(1),
-.navbar-toggler span:nth-child(3) {
-    transition: transform 0.35s ease-in-out !important;
-    transition: transform 0.35s ease-in-out !important;
-}
-  
-.navbar-toggler:not(.collapsed) span:nth-child(1) {
-    position: absolute !important;
-    left: 24px !important;
-    top: 8px !important;
-    transform: rotate(135deg) !important;
-}
-
-.navbar-toggler:not(.collapsed) span:nth-child(2) {
-    height: 12px !important;
-    visibility: hidden !important;
-    background-color: transparent !important;
-}
-
-.navbar-toggler:not(.collapsed) span:nth-child(3) {
-    position: absolute !important;
-    left: 24px !important;
-    top: 8px !important;
-    transform: rotate(-135deg) !important;
-}
-    
-.navbar-nav a::after {
-    content: "";
-    display: block;
-    height: 5px;
-    width: 0;
-    border-radius: 16px;
-    background: #c95bf5;
-    transition: all 0.3s ease-out 0s;
-}
-  
-.navbar-nav a:hover::after {
-    width: 100%;
-}
-
-@media (max-width: 767px) {
-    .navbar {
-		padding: 1rem 2rem !important;
-		font-size: 1.4rem !important;
-		background-color: #181a27 !important;
-    }
-
-    .navbar-nav a::after {
-      	display: none !important;
-    }
-
-	.nav-link {
-	  padding: 0.7rem 1rem !important;
-	}
-}
-
-/* --------- */
+/* --------------------------------------------------------------------- */
 /* Projects */
-/* --------- */
-.project-section {
-    position: relative !important;
-    padding-top: 150px !important;
-    padding-bottom: 30px !important;
-    background-image: var(--section-background-color) !important;
-  }
+/* --------------------------------------------------------------------- */
+.projectPage {
+	position: relative !important;
+	padding-top: calc(5rem + 10vmin) !important;
+	padding-bottom: 2rem !important;
+}
   
-  .project-card {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important;
-    padding-left: 25px !important;
-    padding-right: 25px !important;
-    height: auto !important;
-  }
-  
-  .project-card-view {
+.projectCol {
+    padding: 3.5rem 2rem !important;
+}
+
+.projectCard {
     box-shadow: 0 4px 5px 3px rgba(119, 53, 136, 0.459) !important;
-    color: white !important;
     background-color: transparent !important;
     opacity: 0.9 !important;
     transition: all 0.5s ease 0s !important;
     height: 100% !important;
-  }
-  .project-card-view:hover {
+}
+
+.projectCard:hover {
     transform: scale(1.02) !important;
-    overflow: hidden !important;
     box-shadow: 0 4px 4px 5px rgba(129, 72, 144, 0.561) !important;
-  }
+}
   
-  .blog-card {
-    padding-top: 50px !important;
-    padding-bottom: 50px !important;
-    padding-left: 25px !important;
-    padding-right: 25px !important;
-    height: auto !important;
-  }
+.projectCard img {
+  	padding: 20px !important;
+  	opacity: 0.8 !important;
+  	border-radius: 10px !important;
+}
   
-  .blog-card-view {
-    background-color: transparent !important;
-    box-shadow: 0 3px 3px 2px rgba(145, 77, 161, 0.459) !important;
-    color: white !important;
-    transition: all 0.5s ease 0s !important;
-    height: 100% !important;
-  }
-  
-  .blog-link {
-    color: white !important;
-    text-decoration: none !important;
-  }
-  
-  .blog-link:hover {
-    cursor: pointer !important;
-  }
-  
-  .blog-card-view:hover {
-    transform: scale(1.02) !important;
-    overflow: hidden !important;
-    box-shadow: 0 3px 3px 5px rgba(155, 88, 173, 0.65) !important;
-  }
-  
-  .card-img-top {
-    padding: 20px !important;
-    opacity: 0.8 !important;
-    border-radius: 10px !important;
-  }
-  
-  .blog-img {
-    padding: 0px !important;
-    opacity: 0.8 !important;
-    border-radius: 0px !important;
-  }
-  
-.btn-primary {
-    color: #fff !important;
+.projectCard a {
     background-color: #623686 !important;
     border-color: #623686 !important;
     align-self: end !important;
     margin: 0px 0.5rem
 }
   
-  .btn-primary:hover {
-    color: #fff !important;
+.projectCard a:hover {
     background-color: #6d20c5d7 !important;
     border-color: #6d20c5d7 !important;
-  }
-  .btn:focus {
-    outline: none !important;
-    box-shadow: none !important;
-  }
-  .project-heading {
-    color: white !important;
-    font-size: 2.3em !important;
-    font-weight: 500 !important;
-    padding-top: 10px !important;
-  }
+}
+
+.reveal{
+	position: relative;
+	transform: translateY(150px);
+	opacity: 0;
+	transition: 1.5s all ease;
+}
   
+.reveal.active{
+	transform: translateY(0);
+	opacity: 1;
+}
